err/pythiacrypto.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pythiacrypto'...
Compiling './lib/python3.5/site-packages/pythiacrypto/common.py'...
***   File "./lib/python3.5/site-packages/pythiacrypto/common.py", line 40
    print "{0}\t{1}".format(label, value)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythiacrypto/profileClient.py'...
***   File "./lib/python3.5/site-packages/pythiacrypto/profileClient.py", line 41
    print "Running {} for {} iterations".format(name, iterations)
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythiacrypto/testPerformance.py'...
***   File "./lib/python3.5/site-packages/pythiacrypto/testPerformance.py", line 56
    print "{}, {} iterations: {:4.3f} seconds (total);\t"\
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pythiacrypto/testPrf.py'...
***   File "./lib/python3.5/site-packages/pythiacrypto/testPrf.py", line 374
    print "{0} tests passed!".format(testTotal)
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pythiacrypto-1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
